add css no header do sobre.

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <title>Mateus C. Silva</title>
         <!-- CSS -->
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/sobre.css">
     </head>
     <body>
         <header>
-            <img src="" alt="" />
+            <img src="assets/perfil.jpeg" alt="imagem de perfil de mateus" />
             <nav>
                 <a href="#">Sobre</a>
                 <a href="#">Conhecimentos</a>
@@ -19,17 +20,17 @@
 
         <main>
             <section class="sobre">
-                <div>
+                <div class="info-sobre">
                     <h1>Mateus Camargo Silva</h1>
                     <p>Rua Tiziu, 38, Araruna - PR</p>
                     <a href="mailto:mateuscamargodasilva2@gmail.com">mateuscamargo@silva.com</a>
                 </div>
 
-                <div>
+                <div class="descricao">
                     <p>Descrição pessoal</p>
                 </div>
 
-                <div>
+                <div class="links-icons"> 
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
