--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mateus C. Silva</title>
+        <!-- FAVICON -->
+        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
         <!-- CSS -->
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/sobre.css">
