--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Mateus C. Silva</title>
+
         <!-- FAVICON -->
-        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+        <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon"/>
+
         <!-- CSS -->
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/sobre.css">
+        <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="css/sobre.css" />
+
+        <!-- FONTS -->
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" />
+
     </head>
     <body>
         <header>
@@ -23,16 +31,18 @@
         <main>
             <section class="sobre">
                 <div class="info-sobre">
-                    <h1>Mateus Camargo Silva</h1>
+                    <h1>Mateus <span>Camargo Silva</span></h1>
                     <p>Rua Tiziu, 38, Araruna - PR</p>
-                    <a href="mailto:mateuscamargodasilva2@gmail.com">mateuscamargo@silva.com</a>
+                    <a href="mailto:mateuscamargodasilva2@gmail.com"
+                        >mateuscamargo@silva.com</a
+                    >
                 </div>
 
                 <div class="descricao">
                     <p>Descrição pessoal</p>
                 </div>
 
-                <div class="links-icons"> 
+                <div class="links-icons">
                     <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     <a href=""><i class="fa-brands fa-github"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
@@ -41,6 +51,9 @@
             </section>
         </main>
 
-        <script src="https://kit.fontawesome.com/57991f803a.js" crossorigin="anonymous"></script>
+        <script
+            src="https://kit.fontawesome.com/57991f803a.js"
+            crossorigin="anonymous"
+        ></script>
     </body>
 </html>
