feito estilização restante e algumas modificações

--- a/index.html
+++ b/index.html
@@ -29,25 +29,35 @@
         </header>
 
         <main>
-            <section class="sobre">
+            <section class="info">
                 <div class="info-sobre">
-                    <h1>Mateus <span>Camargo Silva</span></h1>
-                    <p>Rua Tiziu, 38, Araruna - PR</p>
-                    <a href="mailto:mateuscamargodasilva2@gmail.com"
-                        >mateuscamargo@silva.com</a
-                    >
+                    <h1>Mateus <span>C. da Silva</span></h1>
+                    <div>
+                        <p>Rua Tiziu, 38, Araruna - PR <a href="mailto:mateuscamargodasilva2@gmail.com">mateuscamargo@silva.com</a></p>
+                    </div>
                 </div>
 
                 <div class="descricao">
-                    <p>Descrição pessoal</p>
+                    
                 </div>
 
                 <div class="links-icons">
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
                 </div>
+            </section>
+
+            <section class="sobre-mim">
+                <p>Explorador do mundo da tecnologia, estou em constante aprimoramento na minha 
+                    jornada de desenvolvimento pessoal, revelando uma dedicação incansável, 
+                    coragem para arriscar e uma clareza inabalável sobre meus objetivos, guiado 
+                    pela paixão pelo universo da programação.
+                </p>
+            </section>
+
+            <section class="links-icons">
+                <a href="https://www.linkedin.com/in/mateus-camargo-da-silva-2b8610215/"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/MateusCamargoS-1"><i class="fa-brands fa-github"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
             </section>
         </main>
 
