feito algumas alterações no css e na pagina sobre

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="info-sobre">
                     <h1>Mateus <span>C. da Silva</span></h1>
                     <div>
-                        <p>Rua Tiziu, 38, Araruna - PR <a href="mailto:mateuscamargodasilva2@gmail.com">mateuscamargo@silva.com</a></p>
+                        <p>Rua Tiziu, 38, Araruna - PR <a href="mailto:mateuscamargodasilva2@gmail.com" target="_blank">mateuscamargo@silva.com</a> - <a href="http://wa.me/44988355272" target="_blank">Tel:(44) 9 98835-5272</a></p>
                     </div>
                 </div>
 
