add page conhecimentos e objetivos

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <!-- CSS -->
         <link rel="stylesheet" href="css/reset.css" />
+        <link rel="stylesheet" href="./css/geral.css">
         <link rel="stylesheet" href="css/sobre.css" />
 
         <!-- FONTS -->
@@ -22,9 +23,9 @@
         <header>
             <img src="assets/perfil.jpeg" alt="imagem de perfil de mateus" />
             <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Conhecimentos</a>
-                <a href="#">Objetivo</a>
+                <a href="./index.html">Sobre</a>
+                <a href="./conhecimento.html">Conhecimentos</a>
+                <a href="./objetivo.html">Objetivo</a>
             </nav>
         </header>
 
@@ -54,10 +55,10 @@
             </section>
 
             <section class="links-icons">
-                <a href="https://www.linkedin.com/in/mateus-camargo-da-silva-2b8610215/"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://github.com/MateusCamargoS-1"><i class="fa-brands fa-github"></i></a>
-                <a href=""><i class="fa-brands fa-instagram"></i></a>
-                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.linkedin.com/in/mateus-camargo-da-silva-2b8610215/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://github.com/MateusCamargoS-1" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
             </section>
         </main>
 
