--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Mateus C. Silva</title>
+        <title>Mateus C. Silva - Sobre</title>
 
         <!-- FAVICON -->
         <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon"/>
@@ -25,7 +25,7 @@
             <nav>
                 <a href="./index.html">Sobre</a>
                 <a href="./conhecimento.html">Conhecimentos</a>
-                <a href="./objetivo.html">Objetivo</a>
+                <a href="./objetivo.html">Objetivos</a>
             </nav>
         </header>
 
