--- a/conhecimento.html
+++ b/conhecimento.html
@@ -31,7 +31,7 @@
             <nav>
                 <a href="./index.html">Sobre</a>
                 <a href="./conhecimento.html">Conhecimentos</a>
-                <a href="./objetivo.html">Objetivo</a>
+                <a href="./objetivo.html">Objetivos</a>
             </nav>
         </header>
         <main>
