algumas refatorações, deixando a pagina responsivo

--- a/conhecimento.html
+++ b/conhecimento.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="./css/geral.css" />
         <link rel="stylesheet" href="css/conhecimento.css" />
+        <link rel="stylesheet" href="./css/media-conhecimento.css">
 
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
