--- a/objetivo.html
+++ b/objetivo.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="./css/geral.css" />
         <link rel="stylesheet" href="css/objetivo.css" />
+        <link rel="stylesheet" href="./css/media-objetivo.css">
 
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
