--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="css/reset.css" />
         <link rel="stylesheet" href="./css/geral.css">
         <link rel="stylesheet" href="css/sobre.css" />
+        <link rel="stylesheet" href="./css/media-sobre.css">
 
         <!-- FONTS -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -34,12 +35,8 @@
                 <div class="info-sobre">
                     <h1>Mateus <span>C. da Silva</span></h1>
                     <div>
-                        <p>Rua Tiziu, 38, Araruna - PR <a href="mailto:mateuscamargodasilva2@gmail.com" target="_blank">mateuscamargo@silva.com</a> - <a href="http://wa.me/44988355272" target="_blank">Tel:(44) 9 98835-5272</a></p>
+                        <p>Rua Tal, 38, Araruna - PR <a href="mailto:mateuscamargodasilva2@gmail.com" target="_blank">mateuscamargo@silva.com</a> - <a href="http://wa.me/44988355272" target="_blank">Tel:(44) 9 9800-070</a></p>
                     </div>
-                </div>
-
-                <div class="descricao">
-                    
                 </div>
 
                 <div class="links-icons">
